--- a/src/componentes/Cabecalho/Cabecalho.module.css
+++ b/src/componentes/Cabecalho/Cabecalho.module.css
@@ -11,6 +11,8 @@
     justify-content: center;
     display: flex;
     align-items: flex-end;
+    min-height: 340px;
+    max-height: 600px;
     
 }
 
@@ -33,6 +35,8 @@
 }
 
 .capa {
-    /* height: 200px; */
-    width: auto;
+    height: 100%;
+
+    /* width: ; */
+    background-size: auto;
 }
