--- a/src/paginas/Inicio/Inicio.module.css
+++ b/src/paginas/Inicio/Inicio.module.css
@@ -1,3 +1,5 @@
+
+
 .galeria {
     
     display: flex;
@@ -13,10 +15,18 @@
     /* margin: none; */
     height: auto;
     /* width: 50%; */
+
 }
 
-.fold {
+.card img {
     width: 100%;
+    height: 100%;
+}
+
+@media (max-width: 10000px) {
+    .card {
+        width: 10%;
+    }
 }
 
 @media (max-width: 2560px) {
