--- a/src/componentes/Cabecalho/Cabecalho.module.css
+++ b/src/componentes/Cabecalho/Cabecalho.module.css
@@ -12,8 +12,13 @@
     display: flex;
     align-items: flex-end;
     min-height: 340px;
-    max-height: 600px;
+    max-height: 400px;
     
+}
+
+.foto {
+    height: 100px;
+    border-radius: 100%;
 }
 
 .texto {
@@ -23,20 +28,30 @@
 
 }
 
-.h3 {
-    margin-bottom: 100px;
+.func {
+    margin-top: 5px;
+    margin-bottom: 50px;
+    font-weight: 500;
+    color: #c7c7c7;
 }
 
 
-.titulo {
+.nome {
     color: #fff;
     /* position: absolute; */
     align-items: flex-end;
+    margin: 0;
 }
 
 .capa {
-    height: 100%;
+    width: 100%;
+    height: auto;
+    min-height: 400px;
+    object-fit: cover;
+    /* position: absolute; */
+    top: 0;
+
 
     /* width: ; */
-    background-size: auto;
+    /* background-size: auto; */
 }
