--- a/src/paginas/Inicio/Inicio.module.css
+++ b/src/paginas/Inicio/Inicio.module.css
@@ -8,3 +8,13 @@
     display: -ms-flexbox; */
     
 }
+
+/* .container {
+    margin-inline: 15%;
+}
+
+@media (max-width: 992px) {
+    .container {
+        margin-inline: 0vh;
+    }
+} */
