--- a/src/componentes/Container/Container.module.css
+++ b/src/componentes/Container/Container.module.css
@@ -1,12 +1,11 @@
 .container {
     margin-inline: 300px;
     color: white;
-    display: flex;
-    flex-wrap: wrap;
+    margin-top: 35px;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 1100px) {
     .container {
-        margin-inline: 10px;
+        margin-inline: 15px;
     }
 }
